# gender-prediction-MLOps

./: .gitattributes  .gitignore  README.md  main.py  model.ipynb  pyproject.toml
.github/workflows/: deploy_prenoms.yml  main.yml
prenoms/: Dockerfile  api.py
templates/: predict.html
