[tool.poetry]
name = "gender-prediction-mlops"
version = "0.1.0"
description = ""
authors = ["Cyrille Nebanga <odilon-cyrille.nebanga-kanga-nzanga@eleve.ensai.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.1"
scikit-learn = "0.24"
joblib = "^1.3.2"
numpy = "1.23.5"
pandas = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
